--- a/src/Components/Home/Slider/Welcome.css
+++ b/src/Components/Home/Slider/Welcome.css
@@ -1,16 +1,21 @@
-/* Style for slider */
-.slider-style{
+/* Style for Welcome */
+.welcome-style{
     height: 93.5vh;
     width: 100%;
     background-image: url('https://static01.nyt.com/images/2019/06/14/arts/14listings-classical2/14listings-classical2-videoSixteenByNineJumbo1600.jpg');
+    filter: brightness(90%);
 }
 .Home-title{
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
-.slider-btn{
+.welcome-title{
+    color: blue;
+    filter: brightness(100%);
+    font-size: 50px;
+}
+.welcome-btn{
     background-color: #FFA63D;
     color:black;
 }
